# StarEngine

./: CMakeLists.txt  StarEngine.sln  StarEngine.vcxproj  StarEngine.vcxproj.filters
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Input/: CMakeLists.txt  Input.cpp  Input.h
Engine/Core/Main/: CMakeLists.txt  StarEngine.cpp  StarEngine.h
Engine/Core/Physics/: CMakeLists.txt
Engine/Render/: CMakeLists.txt
Engine/Render/Graphics/: CMakeLists.txt
Engine/Render/Window/: CMakeLists.txt  Window.cpp  Window.h
Include/: CMakeLists.txt
StarEngine/Engine/Core/: StarEngine.cpp  StarEngine.h  main.cpp
StarEngine/Engine/Render/Window/: Window.cpp
