ADD_LIBRARY(Core INTERFACE)
TARGET_INCLUDE_DIRECTORIES(Core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(Core INTERFACE ${OPENGL_LIBS})
ADD_SUBDIRECTORY(Input)
ADD_SUBDIRECTORY(Physics)
ADD_SUBDIRECTORY(Main)
TARGET_LINK_LIBRARIES(Core INTERFACE Input Physics Main)

SET_TARGET_PROPERTIES(Input PROPERTIES FOLDER "Core")
SET_TARGET_PROPERTIES(Physics PROPERTIES FOLDER "Core")
SET_TARGET_PROPERTIES(Main PROPERTIES FOLDER "Core")