ADD_LIBRARY(Render INTERFACE)
TARGET_INCLUDE_DIRECTORIES(Render INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(Render INTERFACE ${OPENGL_LIBS})
ADD_SUBDIRECTORY(Graphics)
ADD_SUBDIRECTORY(Window)
TARGET_LINK_LIBRARIES(Render INTERFACE Graphics Window)

SET_TARGET_PROPERTIES(Graphics PROPERTIES FOLDER "Render")
SET_TARGET_PROPERTIES(Window PROPERTIES FOLDER "Render")